--- a/route/style.css
+++ b/route/style.css
@@ -1,9 +1,12 @@
 .route{
+  display: none;
+}
+.route, .createRoute{
   border: 1px solid black;
   margin: 50px 50px 20px 50px;
   padding: 20px;
 }
-.route h1{
+.route h1, .createRoute h1{
   font-size: 20px;
   font-weight: 500;
   padding: 10px;
@@ -31,4 +34,10 @@
 }
 .route table tr, th, td {
   border: 1px solid black;
+}
+.selectService{
+  display: none;
+}
+.createRoute .form button{
+  margin-top: 20px;
 }
